--- a/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/home.component.html
@@ -8,7 +8,8 @@
       <app-categories></app-categories>
 
       <app-banner></app-banner>
-      <app-featured-sellers id="stores-section"></app-featured-sellers>
+      <app-featured-stores id="stores-section"></app-featured-stores>
+      <!-- <app-featured-sellers id="stores-section"></app-featured-sellers> -->
       <app-car-brands id="brands-section"></app-car-brands>
 
       <app-offers id="offers-section"></app-offers>
