--- a/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/suggested-offers/suggested-offers.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 30px 20px;
   border-radius: 12px;
-  margin: 40px 0;
+  margin: 40px 25px;
   background-image: url("/assets/images/background5.png"); // 🔁 ضع صورة جذابة هنا
   background-size: cover;
   background-position: center;
