--- a/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
+++ b/Fekrah/API/ClientApp/src/app/core/features/home/offers/offers.component.scss
@@ -28,7 +28,7 @@
 }
 
 .section-title {
-  color: var(--white);
+  color: #fff;
   font-weight: 900;
   font-size: 2.5rem;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
@@ -60,7 +60,7 @@
 }
 
 .section-subtitle {
-  color: var(--white);
+  color:#feff36 !important;
   font-size: 1rem;
   font-weight: 600;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
